alignment fixes

--- a/src/styles/common.sass
+++ b/src/styles/common.sass
@@ -12,5 +12,5 @@ a
 
 main, footer
     max-width: 80rem
-    margin: 2rem auto
+    margin: 0 auto
 
