--- a/src/styles/saveTheDate.scss
+++ b/src/styles/saveTheDate.scss
@@ -26,7 +26,9 @@ p {
     }
     &__container {
         display: grid;
-        grid-template-rows: auto 1fr auto;
+        grid-template-rows: auto auto auto;
+        grid-template-columns: auto 1fr auto;
+        height: 100vh;
     }
     &__header {
         box-sizing: border-box;
@@ -39,13 +41,13 @@ p {
     }
     &__floating-text {
         //transform: rotate(-3deg);
-        text-shadow: 0 2px 2px rgba(0, 0, 0, 1); //    text-shadow: -2px 4px 0px black;
+        text-shadow: 0 2px 0 rgba(0, 0, 0, 1); //    text-shadow: -2px 4px 0px black;
         font-size: 3rem;
         font-family: 'Lobster', cursive;
         color: white;
         position: relative;
         margin-right: -335px;
-        top: 440px;
+        top: 438px;
         height: 5rem;
         text-align: center;
         flex-shrink: 0;
@@ -65,10 +67,13 @@ p {
         //-webkit-box-shadow: 0 0 8px rgba(0,0,0,.4);
     }
     &__main {
+        grid-column-start: 2;
+        grid-row-start: 2;
         justify-self: center;
         margin: 5%;
         display: flex;
         flex-direction: row;
+        height: 500px;
     }
     &__image {
         height: 500px;
